--- a/AntSynDistinction/pom.xml
+++ b/AntSynDistinction/pom.xml
@@ -1,7 +1,5 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>composes</groupId>
-  <artifactId>w2vcomp</artifactId>
   <version>0.0.1</version>
   <build>
     <sourceDirectory>src</sourceDirectory>
@@ -88,4 +86,6 @@
         </releases>
     </repository>
   </repositories>
+  <groupId>SemRel</groupId>
+  <artifactId>AntSynDistinction</artifactId>
 </project>
